--- a/styles/main.css
+++ b/styles/main.css
@@ -1,51 +1,83 @@
-html body {
-    margin: 0px;
-    padding: 0px;
+body {
+    margin-right: 0px;
+    margin-left: 0px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+    background-color: #E0DACB;
+    
 }  
 
 .navbar-nav {
     width: 100%;
     text-align: center;
+    padding-right: 150px;
 }
+
 .navbar-nav li {
-      float: none;
-      display: inline-block;
+    float: none;
+    display: inline-block;
+    font-size: 18px;
+    margin-right: 5px
+      
     }
 
 #toplogo{
     float: left;
     padding-top: 15px;
 }
+
+#mainText {
+    color: #E0DACB;
+    padding-bottom: 225px;
+}
+
+#downArrow{
+    color: #C2DB36;
+}
   
 #jumbotronHome{
     background-size: cover;
     overflow: hidden;
+    margin-top: -20px;
     
-    margin: auto;
-    padding-bottom: 100px;
-    padding-top: 100px
+    padding-top: 225px;
+    height:700px;
+    background-image: /* top, transparent red, faked with gradient */ 
+    linear-gradient(
+      rgba(0, 0, 0, 0.45), 
+      rgba(0, 0, 0, 0.45)
+    ),
+    /* bottom, image */url(jumbPhoto.jpg);
+   
 }
 
+.overlayImg{
+    background:  linear-gradient(
+      rgba(0, 0, 0, 0.45), 
+      rgba(0, 0, 0, 0.45)
+    ),;
+    padding-bottom: 30px;
+}
 .photoSvc {
     max-width: 100%;
-    max-height: 250px;
-    
+    max-height: 250px; 
+
 }
 
-ul{
+ul {
 list-style-type: none;
 }
 
-.portimg{
+.portimg {
     width: 100%;
     margin: 0px;
     padding-top: 10px;
-    height: 300px; 
+    height: 350px; 
     float: none;
 }
 
 	
-	footer {
+footer {
     background-color: #2d2d30;
     color: #f5f5f5;
     padding-bottom: 2px;
@@ -147,5 +179,73 @@ list-style-type: none;
 
 #copyright {
     padding-top: 15px;
+}
+
+.svc {
+    background:  linear-gradient(
+      rgba(0, 0, 0, 0.45), 
+      rgba(0, 0, 0, 0.45)
+    ),;
+    padding-top: 10px;
+    
+    margin-bottom: 0px;  
+}
+
+#aboutText {
+    font-size: 20px;
+}
+
+.navbar-default {
+  background-color: #52504a;
+  border-color: #52504a;
+}
+.navbar-default .navbar-brand {
+  color: #918e83;
+}
+.navbar-default .navbar-brand:hover,
+.navbar-default .navbar-brand:focus {
+  color: #c2db36;
+}
+.navbar-default .navbar-text {
+  color: #918e83;
+}
+.navbar-default .navbar-nav > li > a {
+  color: #918e83;
+}
+.navbar-default .navbar-nav > li > a:hover,
+.navbar-default .navbar-nav > li > a:focus {
+  color: #c2db36;
+}
+.navbar-default .navbar-nav > .active > a,
+.navbar-default .navbar-nav > .active > a:hover,
+.navbar-default .navbar-nav > .active > a:focus {
+  color: #c2db36;
+  background-color: #52504a;
+}
+.navbar-default .navbar-nav > .open > a,
+.navbar-default .navbar-nav > .open > a:hover,
+.navbar-default .navbar-nav > .open > a:focus {
+  color: #c2db36;
+  background-color: #52504a;
+}
+.navbar-default .navbar-toggle {
+  border-color: #52504a;
+}
+.navbar-default .navbar-toggle:hover,
+.navbar-default .navbar-toggle:focus {
+  background-color: #52504a;
+}
+.navbar-default .navbar-toggle .icon-bar {
+  background-color: #918e83;
+}
+.navbar-default .navbar-collapse,
+.navbar-default .navbar-form {
+  border-color: #918e83;
+}
+.navbar-default .navbar-link {
+  color: #918e83;
+}
+.navbar-default .navbar-link:hover {
+  color: #c2db36;
 }
 
